JMPI-174: Actioned code review suggestions.