@@ -139,7 +139,7 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
          try {
             candidateList.set(getCandidates(patient));
          } catch (Exception e) {
-            throw new RuntimeException(e);
+            LOGGER.error(e.getMessage());
          }
 
          candidateList.get().forEach(candidate -> {
@@ -153,7 +153,6 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
 
          if (!reCompute) {
             throw new RuntimeException("Failed to update score for entity with UID " + patient.patientId());
-
          } else {
             LOGGER.debug("Successfully updated score for entity with UID {}", patient.patientId());
          }
@@ -495,7 +494,7 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
                          .map(candidate -> new WorkCandidate(candidate, calcNormalizedScore(candidate.demographicData(),
                                  patientRecord.demographicData())))
                          .sorted(Comparator.comparing(WorkCandidate::score).reversed())
-                         .toList();
+                         .collect(Collectors.toList());
 
          ArrayList<Notification.MatchData> notificationCandidates = new ArrayList<>();
          for (WorkCandidate candidate : allCandidateScores) {
@@ -506,7 +505,8 @@ public final class BackEnd extends AbstractBehavior<BackEnd.Event> {
 
          return notificationCandidates;
       } catch (Exception e) {
-         throw new RuntimeException(e);
+         LOGGER.error(e.getMessage());
+         return new ArrayList<>();
       }
    }
    private static boolean isWithinThreshold(final float score) {
